<resources>
    <string name="app_name" translatable="false">FitnessChallenge</string>
    <string name="profile">Profile</string>
    <string name="timer" translatable="false">Timer</string>
    <string name="settings">Settings</string>
    <string name="home" translatable="false">Home</string>
    <string name="gym_workout">Gym workout</string>
    <string name="enter">ENTER</string>
    <string name="outdoor_workout">Outdoor workout</string>
    <string name="start">Start</string>
    <string name="trainer_login">Are you a trainer?</string>
    <string name="login" translatable="false">Login</string>
    <string name="curl_hammer_description">The hammer curl works mainly on the brachioradialis muscle of the upper part of the forearm and on the lateral part of the biceps.</string>
    <string name="curl_hummer" translatable="false">Hummer curl</string>
    <string name="barbell_curl" translatable="false">Barbell curl</string>
    <string name="barbell_curl_description">Exercise involving the long head of the biceps and the flexor muscles of the forearm.</string>
    <string name="alternate_curl_description">The dumbbell curl sitting on the bench is an excellent biceps isolation exercise. The support on the thigh completely relieves the deltoid focusing the work on the lower part of the biceps contributing to the development of the protuberance of the muscle in contact with the forearm.</string>
    <string name="alternate_curl" translatable="false">Alternate curl</string>
    <string name="bumbbell_flyes_description">The openings with dumbbells performed on the high bench work specifically on the external / high area of the bib, developing symmetry and shape of the bib. The anterior part of the shoulder is recruited as secondary muscle.</string>
    <string name="dumbbell_flyes" translatable="false">Dumbbell flyes</string>
    <string name="pectoral_machine_description">Pectoral machine closures are an excellent exercise for working the entire pectoral muscle, both in the internal part (closing phase) and in the external part (opening and stretching phase).</string>
    <string name="pectoral_machine">Pectoral machine</string>
    <string name="bench_press_description">The flat bench presses with the barbell are the main exercise for the development of the mass and strength of the entire pectoral muscle, usually used as the first exercise in pectoral routines. In this exercise the involvement of the triceps is very significant and the anterior deltoids are also recruited as accessory muscles.</string>
    <string name="bench_press" translatable="false">Bench press</string>
    <string name="error_in_db">Error in DB please verify</string>
    <string name="fitness_challenge_db" translatable="false">FitnessChallengeDB</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="shit_error">Shit something wrong!</string>
    <string name="no_auto_login">No auto login detected</string>
    <string name="yes_auto_login">Auto loggin detected</string>
    <string name="email" translatable="false">Email</string>
    <string name="complete_correctly_field">Complete correctly this field</string>
    <string name="login_failed">Login failed, verify your email and password</string>
    <string name="login_successfull">Login successfull</string>
    <string name="login_image">Login image</string>
    <string name="not_a_member_sign_up">Not a member? Sign up</string>
    <string name="back_button">Back button</string>
    <string name="repeat_password">Repeat password</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="pick_image">Pick image</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="trainer_user" translatable="false">TRAINER/USER</string>
    <string name="user" translatable="false">USER</string>
    <string name="trainer" translatable="false">TRAINER</string>
    <string name="registration_failed">Something went wrong</string>
    <string name="sign_in_fail">SignIn failed</string>
    <string name="sign_in_successfully">SignIn successfully</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="training_card">Training card</string>
    <string name="show_training_list">Show training list</string>
    <string name="create_training_list">Create training list</string>
    <string name="create">CREATE</string>
    <string name="_0" translatable="false">0</string>
    <string name="_100" translatable="false">/100</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="training_goal">Training goal</string>
    <string name="starting_training_date">Starting training date</string>
    <string name="date_pattern" translatable="false">yyyy-MM-dd</string>
    <string name="gain_muscle">GAIN MUSCLE</string>
    <string name="get_fit">GET FIT</string>
    <string name="title_goes_here">Title goes here</string>
    <string name="repetition_set">Repetition/Set</string>
    <string name="action_button">Action button</string>
    <string name="drag_handle_button">Drag handle button</string>
    <string name="exercise_image">Exercise image</string>
    <string name="nothing_to_show_yet">Nothing to show yet!</string>
    <string name="exercise_series">Exercise series</string>
    <string name="exercise_repetition">Exercise repetition</string>
    <string name="expand_collapse_button">Expand collapse button</string>
    <string name="workout_statistics">Workout statistics</string>
    <string name="training_list">Training list</string>
    <string name="open">Open</string>
    <string name="whe_are_almost_here">We are almost here</string>
    <string name="pick_the_date">Pick the date</string>
    <string name="finish_date">Finish date</string>
    <string name="entry_completed">Entry completed</string>
    <string name="finish">Finish</string>
    <string name="check_image">Check image</string>
    <string name="add_exercise_to_list">Add exercise to list</string>
    <string name="user_does_not_exist_select_another_one">The selected user does not exist, please insert another user</string>
    <string name="gym_enter_background">Gym enter background</string>
    <string name="nfc_image">NFC image</string>
    <string name="nfc_instruction">Place the device on the NFC reader</string>
    <string name="previous_exercise">Previous exercise</string>
    <string name="next_exercise">Next exercise</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="exercise_title">Exercise title</string>
    <string name="add_weight">Add weight</string>
    <string name="_1_20" translatable="false">1\':20\'\'</string>
    <string name="play_timer">Play timer</string>
    <string name="current_repetition">Current repetition</string>
    <string name="_1_3" translatable="false">1/3</string>
    <string name="last_time">Last time</string>
    <string name="_22_gen_2020" translatable="false">22 gen 2020</string>
    <string name="information">Information</string>
    <string name="set_cool_down">Set cool down</string>
    <string name="timer_picker">Timer picker</string>
    <string name="_00" translatable="false">00</string>
    <string name="colons" translatable="false">:</string>
    <string name="set_timer">Set timer</string>
    <string name="cool_down">Cool down</string>
    <string name="my_workout">My workout</string>
    <string name="breathe_in_rhythm">Breathe in rhythm</string>
    <string name="time_in_seconds">Time in seconds</string>
    <string name="remaining_time">Remaining time</string>
    <string name="delete_timer">Delete timer</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="stop_timer" translatable="false">Stop timer</string>
    <string name="pause_timer">Pause timer</string>
    <string name="repetition">Repetition</string>
    <string name="weight">Weight in Kg</string>
    <string name="save">Save</string>
    <string name="ops" translatable="false">Ops!!!</string>
    <string name="there_is_not_previously_execution">There is not previously execution.</string>
    <string name="used_kilograms">Used kilograms</string>
    <string name="no_past_execution">No past execution</string>
    <string name="last_execution">Last execution</string>
    <string name="finish_workout">Finish</string>
    <string name="uploading_your_workout">Uploading your workout…</string>
    <string name="please_wait_a_few_moment">Please wait a few moment…</string>
    <string name="upload_workout_image">Upload workout image</string>
    <string name="upload_complete">Upload complete, thank you</string>
    <string name="get_next_exercise">Get next exercise</string>
    <string name="stop_workout">Stop workout</string>
    <plurals name="repetitionNumber">
        <item quantity="one">First repetition</item>
        <item quantity="other">%d repetition</item>
    </plurals>
    <string name="title_activity_statistics">Overview</string>
    <string name="statistics_tab_title">Statistics</string>
    <string name="room_tab_title" translatable="false">Room</string>
    <string name="workout_times">Workout times:</string>
    <string name="room_image">Room image</string>
    <string name="room_name">Room name</string>
    <string name="members_n">Members n°</string>
    <string name="my_rooms">My rooms</string>
    <string name="room_code">Room code</string>
    <string name="ranking">Ranking</string>
    <string name="close_details">Close details</string>
    <string name="new_room">New room</string>
    <string name="search">Search</string>
    <string name="search_room_hint">Search room</string>
    <string name="waiting_search_image">Waiting search image</string>
    <string name="close_subscribe">Close subscribe new room</string>
    <string name="generated_code">Generated code:</string>
    <string name="close_new_room">Close new room</string>
    <string name="subscribe">Subscribe</string>
    <string name="room_details">Room details</string>
    <string name="upload_room_failed">Error uploading new room in FireBase</string>
    <string name="connection_error_message">It looks like you don\'t have an active connection, active the network to continue</string>
    <string name="room_s_creator">Room\'s creator</string>
    <string name="success">Success</string>
    <string name="upload_complete_successful">Upload complete successful</string>
    <string name="no_connection_image">No connection image</string>
    <string name="start_workout_fab">Start workout</string>
    <string name="open_fitness_option_fab">Open fitness option</string>
    <string name="registration_error">It seems that you have no active training or that you are not registered on the platform, if you have training in the cloud, log in, otherwise create one.</string>
    <string name="sharing_progress">Sharing your progress… wait a moment</string>
    <string name="shared_point">Shared point</string>
    <string name="close_sharing_sheet">Close sharing sheet</string>
    <string name="progress_saved">Your progress has been saved. Thank you</string>
    <string name="no_active_workout">There are no active workout for you</string>
    <string name="ranking_image">Ranking image</string>
    <string name="subscribing_in_a_new_room_please_wait">Subscribing in a new room, please wait…</string>
    <string name="subscribing_complete">Subscribing complete, thank you</string>
    <string name="subscribing_error">Subscribing error</string>
    <string name="room_error">Room error</string>
    <string name="algolia_logo">Algolia logo</string>
    <string name="profile_background">Profile background</string>
</resources>