<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFinishDate">

    <TextView
        android:id="@+id/add_finish_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/whe_are_almost_here"
        android:textSize="@dimen/headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_finish_date_subtititle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/finish_date"
        android:textSize="@dimen/sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_finish_date_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_finish_date_pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/pick_the_date"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_finish_date_date" />

    <TextView
        android:id="@+id/add_finish_date_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/date_pattern"
        android:textSize="@dimen/body"
        app:layout_constraintStart_toStartOf="@+id/add_finish_date_subtititle"
        app:layout_constraintTop_toBottomOf="@+id/add_finish_date_subtititle" />

</androidx.constraintlayout.widget.ConstraintLayout>