<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin">

    <TextView
        android:id="@+id/registration_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/sharing_progress"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_progress_bar" />

    <ProgressBar
        android:id="@+id/registration_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_close_sheet" />

    <TextView
        android:id="@+id/shared_point_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/multiline_distance"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/shared_point"
        android:textSize="@dimen/sub_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shared_point"
        app:layout_constraintStart_toStartOf="@+id/registration_label"
        app:layout_constraintTop_toBottomOf="@+id/registration_label" />

    <TextView
        android:id="@+id/shared_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_distance"
        android:text="@string/_0"
        android:textSize="@dimen/sub_title"
        app:layout_constraintBottom_toBottomOf="@+id/shared_point_label"
        app:layout_constraintStart_toEndOf="@+id/shared_point_label"
        app:layout_constraintTop_toTopOf="@+id/shared_point_label" />

    <ImageButton
        android:id="@+id/registration_close_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/close_sharing_sheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_black" />

    <ImageView
        android:id="@+id/registration_image_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/success"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_check_circle_100dp" />
</androidx.constraintlayout.widget.ConstraintLayout>